# src/server.ts
@@ -9,6 +9,8 @@ import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./swagger.json";
 import { MongoUpdateUserRepository } from "./repositories/update-user/mongo-update-user";
 import { UpdateUserController } from "./controllers/update-user/update-user";
+import { MongoDeleteUserRepository } from "./repositories/delete-user/mongo-delete-user";
+import { DeleteUserController } from "./controllers/delete-user/delete-user";
 
 const main = async () => {
   const app = express();
@@ -65,6 +67,25 @@ const main = async () => {
 
       const { body, statusCode } = await updateUserController.handle({
         body: req.body,
+        params: req.params,
+      });
+
+      res.status(statusCode).send(body);
+    } catch (err) {
+      console.log(err);
+      res.status(500).json(err);
+    }
+  });
+
+  app.delete("/delete_user/:id", async (req, res) => {
+    try {
+      const mongoDeleteUserRepository = new MongoDeleteUserRepository();
+
+      const deleteUserController = new DeleteUserController(
+        mongoDeleteUserRepository
+      );
+
+      const { body, statusCode } = await deleteUserController.handle({
         params: req.params,
       });
 
